# openrobotix-svn

playerstage/branches/player-2.1/: configure.ac
playerstage/branches/player-2.1/config/: Makefile.am  olsrd.cfg
playerstage/branches/player-2.1/drivers/: Makefile.am
playerstage/branches/player-2.1/drivers/camerav4l2/: Makefile.am  camerav4l2.cc
playerstage/branches/player-2.1/drivers/olsrd/: Makefile.am  olsrd.cc
playerstage/branches/player-2.1/patches/: stage-ir_3.0.1.patch
playerstage/branches/player-2.1/worlds/: bebot.inc
playerstage/trunk/: Makefile.am  configure.ac
playerstage/trunk/config/: Makefile.am  bebot.cfg  bebot_cam.cfg  camerav4l2.cfg  colors.txt  olsrd.cfg
playerstage/trunk/drivers/: Makefile.am
playerstage/trunk/drivers/bebot/: Makefile  Makefile.am  bebot.cfg  bebot_base.cc  bebot_ir.cc  bebot_motor.cc
playerstage/trunk/drivers/camerav4l2/: Makefile  Makefile.am  camerav4l2.cc  camerav4l2.cfg
playerstage/trunk/drivers/olsrd/: olsrd.cc
playerstage/trunk/patches/: playercam-fix-assert.patch  stage-ir_3.1.0.patch
playerstage/trunk/worlds/: bebot.cfg  bebot.inc  bebot.world  map.inc
senseact/trunk/: Kbuild  Makefile  bebot_ir.c  bebot_motor.c  ds2782.c  lis3lv02dq.c
senseact/trunk/drivers/: Kbuild  bebot-base.c  bebot-ir.c  modules.order  senseact-poll.c  senseact.c  test.c
senseact/trunk/include/: Kbuild  bebot.h
senseact/trunk/include/linux/: Kbuild  senseact-poll.h  senseact.h
senseact/trunk/tools/: Makefile  senseact.c
utils/trunk/: Makefile  Makefile.inc  avoid.c  wiibot.c
utils/trunk/bebot/: Makefile  avoid.c  wiibot.c
utils/trunk/fpga/: Makefile  fpga.bit  fpga.c
utils/trunk/fpga/ise/: fpga.xise
utils/trunk/fpga/vhdl/: clock_ctrl.vhd  fpga.ucf  fpga_tb.vhd  fpga_top.vhd  localbus.vhd
utils/trunk/player/: Makefile  follow.cc
